Add example config

--- a/alpha-rascal/config.json
+++ b/alpha-rascal/config.json
@@ -1,7 +1,9 @@
 {
-    "inputFolderAbsolutePath": "C:/Development/TF/Alpha/alpha-rascal/input/abstraction-levels",
+    "inputFolderAbsolutePath": "C:/Alpha/alpha-rascal/input",
     "saveFilesAsJson": true,
     "composeModels": true,
     "verbose": true,
+    "inDocker": false,
+    "localDrive": "C:",
     "saveUnresolvedIncludes": true
 }
